modif repertoire img

--- a/DGTDev.html
+++ b/DGTDev.html
@@ -189,7 +189,7 @@
    			</div>
    			</div>
    			<div class="contact_droite">
-   				<img src="merci.jpg" class="image_code">
+   				<img src="./img/merci.jpg" class="image_code">
    			</div>
 
    		</section>
